--- a/branching-website.html
+++ b/branching-website.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Branching Practice Site</title>
   </head>
   <body>
